
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-554 Loading data using HCatLoader() from a table on non default namenode fails.(amalakar via avandana)

  HCAT-566 HCatTable doesn't report partition columns correctly. (mithun via traviscrawford)

  HCAT-562 HCatClient should allow for a table's message-topic-name to be queried for. (mithunr via avandana)

  HCAT-561 HCatClient should differentiate between "partition not available" and other generic errors. (mithun via avandana)

  HCAT-534 HCat_Drop_Table_3 dfs mkdir failing on hadoop23 (cdrome via toffer)

  HCAT-513  Data Store onto HCatalog table fails for dynamic partitioning as the temporary directory gets deleted by the completed map tasks (amalakar via toffer)

  HCAT-490 HCatStorer() throws error when the same partition key is present in records in more than one tasks running as part of the same job (amalakar via toffer)

  HCAT-494 MultiOutputFormat in 0.23 fails to setAliasConf() correctly. (mithun via toffer)

  HCAT-507 e2e harness failing on 0.23 (toffer)

  HCAT-499 Multiple store commands does not work with Hadoop23 (rohinip via avandana)

  HCAT-445 Clover builds broken on trunk (rohinip via avandana)

  HCAT-477 Drop table API in webhcat client does not respect the "ifExists" parameter. (avandana)

  HCAT-471 Test HCat_ShowDes_1[1-3] fails (vikram.dixit via gates)

  HCAT-451 Partitions are created even when Jobs are aborted (avandana)

  HCAT-436 JSON SerDe column misnaming on CTAS (khorgath via gates)

  HCAT-449 HCatLoader is mistakenly identifying Configuration parameters to store (cdrome via traviscrawford)

  HCAT-452 HCat_Drop_Table_3 does not get initialized properly (cdrome via toffer)  
